--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,25 @@
     transform: rotate(360deg);
   }
 }
+
+.board {
+  border: 2px solid darkgreen;
+  width: 400px;
+  height: 300px;
+  margin: 0 auto;
+  display: grid;
+  grid-template: repeat(3, 1fr) / repeat(4, 1fr);
+}
+
+.block {
+  pointer-events: none;
+}
+
+.square {
+  background: lightblue;
+  border: 1px solid darkgreen;
+  font-size: 60px;
+  font-weight: 800;
+  cursor: pointer;
+  outline: none;
+}
